--- a/login.html
+++ b/login.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title></title>
+	<link rel="stylesheet" href="login.css">
+	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+</head>
+<body>
 
+
+<div id="login">
+
+	<h2><span class="fontawesome-lock"></span>Sign In</h2>
+	
+<form action="ok.html" method="GET">
+<fieldset>
+
+	
+
+
+	<p><label for="email"> Email: </label></p>
+	<p><input type="text" id="email" placeholder="mail@address.com" name="email" ></p>
+
+	<p><label for="password"> Mật khẩu: </label><p>
+	<p><input type="password" id="password" placeholder="password" name="password"></p>
+
+	<p><label for="diachi"> Địa chỉ: </label><p>
+	<p><input type="text" id="diachi" placeholder="VD: 26 ngo 10 pho 8/3" name="diachi"></p>
+
+	<p><label for="phone"> Số đt: </label><p>
+	<p><input type="text" id="diachi" placeholder="0967623333" name="phone"></p>
+
+
+	<label for="namsinh"> Năm sinh:  
+	
+	<select name ="year">
+	  <option> chọn năm sinh...</option>
+	  <option> 1990</option>
+	  <option> 1991</option>
+	  <option> 1992</option>
+	  <option> 1993</option>
+	  <option> 1994</option>
+	  <option> 1995</option>
+	</select></label><br>
+
+	<p><label for="gioitinh"> Giới tính:
+	<select name ="gioitinh">
+	  <option> chọn giới tính...</option>
+	  <option> Nam</option>
+	  <option> Nữ</option>
+	  <option> Không biết </option>
+	  
+	</select></label></p>
+	<br>
+
+
+
+	<label for="submit"><p><input type="submit" value="Đăng nhập"></p></label>
+
+
+</fieldset>
+</form>	
+
+</div>
+
+
+
+</body>
+</html>
